@@ -1,6 +1,8 @@
 Revision history for Perl extension App::Sqitch
 
 0.9994
+     - Reduced minimum required MySQL engine from 5.1.0 to 5.0.0. Thanks to
+       @dgc-wh for testing it (Issue #251).
 
 0.9993  2015-08-17T17:55:26Z
      [Bug Fixes]
